--- a/Module1_code.ipynb
+++ b/Module1_code.ipynb
@@ -593,11 +593,11 @@
     "\\end{align*}\n",
     "$$\n",
     "$\\newline$\n",
-    "For your report: \n",
-    "Give your answer and identify clearly:  $\\newline$\n",
-    "a) The likelihood is $P(+|A) = 0.98$. $\\newline$\n",
-    "b) The Bayesian prior is $P(A) = 0.001$, with $P(\\neg A) = 0.999$. $\\newline$\n",
-    "c) The normalization term is P(+). "
+    "\n",
+    "\n",
+    "##### a) The likelihood is $P(+|A) = 0.98$. $\\newline$\n",
+    "##### b) The Bayesian prior is $P(A) = 0.001$, with $P(\\neg A) = 0.999$. $\\newline$\n",
+    "##### c) The normalization term is P(+). "
    ]
   },
   {
