--- a/Module1_code.ipynb
+++ b/Module1_code.ipynb
@@ -189,7 +189,7 @@
     "def plot_polynomial(x, y):\n",
     "    x_plot = np.linspace(0, 1, 1000)\n",
     "\n",
-    "    plt.figure()  # create ONE figure\n",
+    "    plt.figure()\n",
     "\n",
     "    # plot data once\n",
     "    plt.scatter(x, y, color=\"mediumorchid\", marker=\"o\", label=\"data\")\n",
@@ -274,13 +274,6 @@
    "source": [
     "#### For N = 1000"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
